--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-list.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-list.vm
@@ -36,34 +36,16 @@
 
 		#if ($alertMessage)<div class="sak-banner-error">$tlang.getString("gen.alert") $alertMessage</div>#end
 
+			<div>
+				<h3>
+					$tlang.getString("school.title")
+				</h3>	
+				<div class="instruction" style="width: 30%;">
+					$tlang.getString("school.list") 
+				</div>
+			</div>
 		<div class="sakai-table-toolBar">
 			<div class="sakai-table-filterContainer">
-
-				<form name="viewForm" class="worksiteSetupViewAndTermFilterForm" method="post" action="#toolForm("SiteAction")">
-					<div class="sakai-table-viewFilter">
-						<label for="view-top">$tlang.getString("list.view")</label>
-						<span class="skip">$tlang.getString("gen.listnavselect")</span>
-						<select id="view-top" name="view">
-							#foreach($view in $viewKeys)
-								<option value="$view" #if($view == $viewSelected) selected="selected" #end>$views.get($view)</option>
-							#end
-						</select>
-						<input type="hidden" name="eventSubmit_doView_sites" value="view" />
-					</div>
-
-					<div class="sakai-table-viewFilter">
-						<label for="termview-top">$tlang.getString("list.selectTerm")</label>
-						<span class="skip">$tlang.getString("gen.listnavselect")</span>
-						<select id="termview-top" name="termview">
-							#foreach($view in $termViewKeys)
-								<option value="$view" #if($view == $viewTermSelected) selected="selected" #end>$termViews.get($view)</option>
-							#end
-						</select>
-						<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
-						<input type="submit" class="button" value="$tlang.getString("list.submit")" />
-					</div>
-				</form>
-
 				## hide search form when in normal user login and in my workspace sites view
 				#if ($!superUser || (!$!superUser && $viewSelected != $tlang.getString("java.my")))
 					#searchFilterPanel("searchFilter1", $searchString, "doSite_search", "doSite_search_clear")
@@ -102,199 +84,109 @@
 		<form id="sitesForm" name="sitesForm" action="#toolForm("SiteAction")" method="post">
 			<input type="hidden" name="sakai_action" id="sakai_action" value="" />
 			<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
-			<div class="table">
-				<table class="table table-striped table-hover table-bordered" summary="$tlang.getString('list.summary')" id="siteList">
-					<thead>
-						<tr>
-							<th id="checkbox" class="screenOnly attach" scope="col">
-								<input type="checkbox" name="toggleAllSelected" value="" id="toggleAllSelected" title="$tlang.getString('check.all')" />
-							</th>
-							<th id="title" scope="col">
-								<a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_title)")" title="$tlang.getString('list.sortbytitle')">
-									$tlang.getString("list.worksite")
-									#if ($currentSortedBy.equals($sortby_title))
-										#if ($currentSortAsc.equals("true"))
-											<img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.stasc')" alt="$tlang.getString('list.stasc')" />
-										#else
-											<img src="#imageLink("sakai/sortdescending.gif")" border="0" title="$tlang.getString('list.stdesc')" alt="$tlang.getString('list.stdesc')" />
-										#end
-									#end
-								</a>
-							</th>
-							#if($show_id_column)
-								<th id="id" scope="col" class="d-none d-sm-table-cell">
-									<a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_id)")" title="$tlang.getString('list.sortbyid')">
-										$tlang.getString("list.id")
-										#if ($currentSortedBy.equals($sortby_id))
-											#if ($currentSortAsc.equals("true"))
-												<img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.stasc')" alt="$tlang.getString('list.stasc')" />
-											#else
-												<img src="#imageLink("sakai/sortdescending.gif")" border="0" title="$tlang.getString('list.stdesc')" alt="$tlang.getString('list.stdesc')" />
-											#end
-										#end
-									</a>
-								</th>
-							#end
-							<th id="type" scope="col" class="d-none d-sm-table-cell">
-								<a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_type)")" title="$tlang.getString('list.sortbytype')">
-									$tlang.getString("list.type")
-									#if ($currentSortedBy.equals($sortby_type))
-										#if ($currentSortAsc.equals("true"))
-											<img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.styasc')" alt="$tlang.getString('list.styasc')" />
-										#else
-											<img src="#imageLink("sakai/sortdescending.gif")" border="0" title ="$tlang.getString('list.stydesc')" alt="$tlang.getString('list.stydesc')" />
-										#end
-									#end
-								</a>
-							</th>
-							<th id="createdBy" scope="col" class="d-none d-sm-table-cell">
-								<a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_createdby)")" title="$tlang.getString('list.sortbycreator')">
-									$tlang.getString("list.creator")
-									#if ($currentSortedBy.equals($sortby_createdby))
-										#if ($currentSortAsc.equals("true"))
-											<img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.screatorasc')" alt="$tlang.getString('list.screatorasc')" />
-										#else
-											<img src="#imageLink("sakai/sortdescending.gif")" border="0" title="$tlang.getString('list.screatordesc')" alt="$tlang.getString('list.screatordesc')" />
-										#end
-									#end
-								</a>
-							</th>
-							<th id="term" scope="col" class="d-none d-sm-table-cell">
-								$tlang.getString("list.term")
-							</th>
-							<th id="published" scope="col">
-								<a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_publish)")" title="$tlang.getString('list.sortbystatus')">
-									$tlang.getString("list.status")
-									#if ($currentSortedBy.equals($sortby_publish))
-										#if ($currentSortAsc.equals("true"))
-											<img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.spasc')" alt="$tlang.getString('list.ssasc')" />
-										#else
-											<img src="#imageLink("sakai/sortdescending.gif")" border="0" title="$tlang.getString('list.spdesc')" alt="$tlang.getString('list.ssdesc')" />
-										#end
-									#end
-								</a>
-							</th>
-							<th id="createdOn" scope="col">
-								<a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_createdon)")" title="$tlang.getString('list.sortbycreation')">
-									$tlang.getString("list.creationdate")
-									#if ($currentSortedBy.equals($sortby_createdon))
-										#if ($currentSortAsc.equals("true"))
-											<img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.scasc')" alt="$tlang.getString('list.scasc')" />
-										#else
-											<img src="#imageLink("sakai/sortdescending.gif")" border="0" title="$tlang.getString('list.scdesc')" alt="$tlang.getString('list.scdesc')" />
-										#end
-									#end
-								</a>
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						#set ($siteCount=0)
-						#foreach ($site in $sites)
-							#set ($siteCount=$siteCount + 1)
-							#set ($properties = $site.getProperties())
+	
 
-							#if($site.SoftlyDeleted)
-								<tr class="siteListSoftlyDeleted">
-							#else
-								<tr>
-							#end
-								<td headers="checkbox" class="screenOnly attach">
-									#if ($service.allowUpdateSite($site.Id))
-										<input type="checkbox" name="selectedMembers" value="$formattedText.escapeHtml($site.getId())" id="site$siteCount" class="siteSelectCheckbox" />
-										<label class="skip" for="site$siteCount">Select $formattedText.escapeHtml($site.getTitle())</label>
-									#end
-								</td>
-								<td headers="title">
-									#if (!$service.allowAccessSite($site.Id))
-										<label class="unpublishedLabel">$formattedText.escapeHtml($site.getTitle())</label>
-									#else
-										<a href="$site.Url" target="_top">$formattedText.escapeHtml($site.getTitle())</a>
-									#end
-									<div id="dialog_$site.Id"></div>
-									<a href="#" id="$site.Id" class="getSiteDesc" title="$tlang.getString('list.moreinfotooltip')">
-										<img src="#imageLink("sakai/information_gray.png")" border="0" title="$tlang.getString('list.moreinfotooltip')" alt="$tlang.getString('list.moreinfotooltip')" />
-									</a>
-								</td>
-								#if($show_id_column)
-									<td headers="id" class="d-none d-sm-table-cell">
-										$formattedText.escapeHtml($site.getId())
-									</td>
-								#end
-								<td headers="type" class="d-none d-sm-table-cell">
-									#set($type="")
-									#set($type = $site.getType())
-									$!type
-								</td>
-								<td headers="createdBy" class="d-none d-sm-table-cell">
-									#if ($site.CreatedBy)
-										$formattedText.escapeHtml($site.CreatedBy.DisplayId)
-									#end
-								</td>
-								<td headers="term" class="d-none d-sm-table-cell">
-									#if($!courseSiteTypeStrings.contains($site.getType()))
-										#set($term = "")
-										#set($term = $properties.getProperty('term'))
-										$!term
-									#end
-								</td>
-								<td headers="published">
-									#if($site.isSoftlyDeleted())
-										$tlang.getString("list.softlydeleted")
-									#elseif($site.isPublished())
-										$tlang.getString("list.publi")
-									#else
-										$tlang.getString("list.unpub")
-									#end
-								</td>
-								<td headers="createdOn">
-									#if ($site.CreatedDate) $userTimeService.dateTimeFormat($site.CreatedDate, $tlang.Locale, 2) #end
-								</td>
-							</tr>
-						#end
-					</tbody>
-				</table>
+<div class="table">
+    <table class="table table-striped table-hover table-bordered" summary="$tlang.getString('list.summary')" id="siteList">
+        <thead>
+            <tr>
+                <th id="checkbox" class="screenOnly attach" scope="col" width="5%">
+                    <input type="checkbox" name="toggleAllSelected" value="" id="toggleAllSelected" title="$tlang.getString('check.all')" />
+                </th>
+                <th id="title" scope="col" width="35%">
+                    <a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($schoole_name)")" title="$tlang.getString('list.sortbytitle')">
+                        School Name
+                        #if ($currentSortedBy.equals($sortby_title))
+                            #if ($currentSortAsc.equals("true"))
+                                <img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.stasc')" alt="$tlang.getString('list.stasc')" />
+                            #else
+                                <img src="#imageLink("sakai/sortdescending.gif")" border="0" title="$tlang.getString('list.stdesc')" alt="$tlang.getString('list.stdesc')" />
+                            #end
+                        #end
+                    </a>
+                </th>
+                <th id="published" scope="col" width="10%">
+                    <a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_publish)")" title="$tlang.getString('list.sortbystatus')">
+                        Active
+                        #if ($currentSortedBy.equals($sortby_publish))
+                            #if ($currentSortAsc.equals("true"))
+                                <img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.spasc')" alt="$tlang.getString('list.ssasc')" />
+                            #else
+                                <img src="#imageLink("sakai/sortdescending.gif")" border="0" title="$tlang.getString('list.spdesc')" alt="$tlang.getString('list.ssdesc')" />
+                            #end
+                        #end
+                    </a>
+                </th>
+                <th id="type" scope="col" class="d-none d-sm-table-cell" width="10%">
+                    <a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_type)")" title="$tlang.getString('list.sortbytype')">
+                        State
+                        #if ($currentSortedBy.equals($sortby_type))
+                            #if ($currentSortAsc.equals("true"))
+                                <img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.styasc')" alt="$tlang.getString('list.styasc')" />
+                            #else
+                                <img src="#imageLink("sakai/sortdescending.gif")" border="0" title ="$tlang.getString('list.stydesc')" alt="$tlang.getString('list.stydesc')" />
+                            #end
+                        #end
+                    </a>
+                </th>
+                <th id="createdBy" scope="col" class="d-none d-sm-table-cell" width="10%">
+                    <a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_createdby)")" title="$tlang.getString('list.sortbycreator')">
+                        Teachers
+                        #if ($currentSortedBy.equals($sortby_createdby))
+                            #if ($currentSortAsc.equals("true"))
+                                <img src="#imageLink("sakai/sortascending.gif")" border="0" title="$tlang.getString('list.screatorasc')" alt="$tlang.getString('list.screatorasc')" />
+                            #else
+                                <img src="#imageLink("sakai/sortdescending.gif")" border="0" title="$tlang.getString('list.screatordesc')" alt="$tlang.getString('list.screatordesc')" />
+                            #end
+                        #end
+                    </a>
+                </th>
+                <th id="term" scope="col" class="d-none d-sm-table-cell" width="10%">
+                    <a href="#toolLinkParam("SiteAction" "doSort_sites" "criterion=$formattedText.escapeUrl($sortby_term)")" title="$tlang.getString('list.sortbyterm')">
+                        Students
+                    </a>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            #foreach($school in $schools)
+            <tr>
+                <td headers="checkbox" class="screenOnly attach">
+                    <input type="checkbox" name="selectedMembers" value="school$foreach.index" id="school$foreach.index" class="siteSelectCheckbox" />
+                    <label class="skip" for="school$foreach.index">Select $!school.get("schoole_name")</label>
+                </td>
+                <td headers="title">
+                    $!school.get("schoole_name")
+                    <div id="dialog_school$foreach.index"></div>
+                </td>
+                <td headers="published">
+                    #if($!school.get("school_status"))
+                        <span class="fa fa-check" aria-label="$tlang.getString("list.publi")"></span>
+                    #else
+                        <span class="fa fa-times" aria-label="$tlang.getString("list.unpub")"></span>
+                    #end
+                </td>
+                <td headers="type" class="d-none d-sm-table-cell">
+                    <span style="display: inline-block; padding: 4px 8px; background-color: #f5f5f5; border-radius: 4px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); font-weight: 500; min-width: 30px; text-align: center;">$!school.get("school_state")</span>
+                </td>
+                <td headers="createdBy" class="d-none d-sm-table-cell">
+                    $!school.get("school_teachers")
+                </td>
+                <td headers="term" class="d-none d-sm-table-cell">
+                    $!school.get("school_students")
+                </td>
+            </tr>
+            #end
+        </tbody>
 
-				#if ($sites.isEmpty())
-					<div class="sakai-table-noResultsMessage">
-						$tlang.getString("list.nosites")
-						#if ($!searchString && !$searchString.equals(""))
-							$tlang.getString("list.thatmatch") "$formattedText.escapeHtml($!searchString)"
-						#end
-						$tlang.getString("list.inthe") "$formattedText.escapeHtml($views.get($!viewSelected))".
-					</div>
-				#end
-			</div>
+    </table>
+</div>
+
 		</form>
 
 		#if ($sites.size() > 10 && $pagesizeInt > 10)
 			<div class="sakai-table-toolBar sakai-table-toolBar-bottom">
 				<div class="sakai-table-filterContainer">
-
-					<form name="viewForm" class="worksiteSetupViewAndTermFilterForm" method="post" action="#toolForm("SiteAction")">
-						<div class="sakai-table-viewFilter">
-							<label for="view-bottom">$tlang.getString("list.view")</label>
-							<span class="skip">$tlang.getString("gen.listnavselect")</span>
-							<select id="view-bottom" name="view">
-								#foreach($view in $viewKeys)
-									<option value="$view" #if($view == $viewSelected) selected="selected" #end>$views.get($view)</option>
-								#end
-							</select>
-							<input type="hidden" name="eventSubmit_doView_sites" value="view" />
-						</div>
-
-						<div class="sakai-table-viewFilter">
-							<label for="termview-bottom">$tlang.getString("list.selectTerm")</label>
-							<span class="skip">$tlang.getString("gen.listnavselect")</span>
-							<select id="termview-bottom" name="termview">
-								#foreach($view in $termViewKeys)
-									<option value="$view" #if($view == $viewTermSelected) selected="selected" #end>$termViews.get($view)</option>
-								#end
-							</select>
-							<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
-							<input type="submit" class="button" value="$tlang.getString("list.submit")" />
-						</div>
-					</form>
 
 					## hide search form when in normal user login and in my workspace sites view
 					#if ($!superUser || (!$!superUser && $viewSelected != $tlang.getString("java.my")))
