--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfo.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfo.vm
@@ -4,14 +4,14 @@
 	#if($menu)#toolbar($menu)#end
 	## header for edit site information page
 	<div class="page-header">
-		<h1>$tlang.getString("java.editsite")</h1>
+		<h1>$tlang.getString("school.edit")</h1>
 	</div>
 	<form name="classInformationForm" id="classInformationForm" method="post" action="#toolForm("SiteAction")">
 	## definie form
 	#if(!$existingSite)
 		## adding new site
 		<h3>
-			$tlang.getString("sinfo.other")
+			$tlang.getString("school.info")
 		</h3>
 	#end
 	#if ($alertMessage)<div class="sak-banner-error">$tlang.getString("sitediinf.alert") $alertMessage</div>#end
@@ -105,11 +105,11 @@
 				#if ($siteTitleEditable || (!$!existingSite && !$hasRosterAttached))
 					<span class="reqStar">*</span>
 				#end
-				$tlang.getString("sitediinf.sittit")
+				$tlang.getString("schooldiinf.sittit")
 			</label>
 			<div class="col-sm-6">
 				#if ($siteTitleEditable || (!$!existingSite && !$hasRosterAttached))
-					<input type="text" name="title" id="title" size="20" maxlength="$!titleMaxLength" value="$formattedText.escapeHtml($!title)" />
+					<input type="text" name="title" id="title" size="40" maxlength="$!titleMaxLength" value="$formattedText.escapeHtml($!title)" class="form-control" />
 				#else
 					$formattedText.escapeHtml($!title)
 				#end
@@ -175,6 +175,58 @@
 				</div>
 			</div>	
 		#end
+		<!-- Address -->
+<div class="row mt-3">
+  <label for="devtek_address" class="col-sm-2 form-control-label">
+    <span class="reqStar">*</span> $tlang.getString("school.address")
+  </label>
+  <div class="col-sm-6">
+    <input type="text" name="devtek_address" id="devtek_address" size="40" maxlength="255" value="$!validator.escapeHtml($!devtek_address)" class="form-control" />
+  </div>
+</div>
+
+<!-- City -->
+<div class="row mt-3">
+  <label for="devtek_city" class="col-sm-2 form-control-label">
+    <span class="reqStar">*</span> $tlang.getString("school.city")
+  </label>
+  <div class="col-sm-6">
+    <input type="text" name="devtek_city" id="devtek_city" size="40" maxlength="255" value="$!validator.escapeHtml($!devtek_city)" class="form-control" />
+  </div>
+</div>
+
+<!-- State -->
+<div class="row mt-3">
+  <label for="devtek_state" class="col-sm-2 form-control-label">
+    <span class="reqStar">*</span> $tlang.getString("school.state")
+  </label>
+<div class="col-sm-6">
+  <select name="devtek_state" id="devtek_state" class="form-control">
+    <option value="">-- Select State --</option>
+    <option value="CA" #if($devtek_state == "CA") selected="selected" #end>California</option>
+    <option value="NY" #if($devtek_state == "NY") selected="selected" #end>New York</option>
+    <option value="TX" #if($devtek_state == "TX") selected="selected" #end>Texas</option>
+    <option value="FL" #if($devtek_state == "FL") selected="selected" #end>Florida</option>
+    <option value="IL" #if($devtek_state == "IL") selected="selected" #end>Illinois</option>
+    <option value="PA" #if($devtek_state == "PA") selected="selected" #end>Pennsylvania</option>
+    <option value="OH" #if($devtek_state == "OH") selected="selected" #end>Ohio</option>
+    <option value="GA" #if($devtek_state == "GA") selected="selected" #end>Georgia</option>
+    <option value="NC" #if($devtek_state == "NC") selected="selected" #end>North Carolina</option>
+    <option value="MI" #if($devtek_state == "MI") selected="selected" #end>Michigan</option>
+  </select>
+</div>
+
+</div>
+
+<!-- Zip Code -->
+<div class="row mt-3">
+  <label for="devtek_zipcode" class="col-sm-2 form-control-label">
+    <span class="reqStar">*</span> $tlang.getString("school.zip")
+  </label>
+  <div class="col-sm-6">
+    <input type="text" name="devtek_zipcode" id="devtek_zipcode" size="40" maxlength="10" value="$!validator.escapeHtml($!devtek_zipcode)" class="form-control" />
+  </div>
+</div>
 		## Language ##
 		<div class="row">
 			<label for="language"  class="col-sm-2 form-control-label">
