--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfo.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfo.vm
@@ -177,42 +177,42 @@
 		#end
 		<!-- Address -->
 <div class="row mt-3">
-  <label for="devtek_address" class="col-sm-2 form-control-label">
+  <label for="devtek-site-address" class="col-sm-2 form-control-label">
     <span class="reqStar">*</span> $tlang.getString("school.address")
   </label>
   <div class="col-sm-6">
-    <input type="text" name="devtek_address" id="devtek_address" size="40" maxlength="255" value="$!validator.escapeHtml($!devtek_address)" class="form-control" />
+    <input type="text" name="devtek-site-address" id="devtek-site-address" size="40" maxlength="255" value="$!validator.escapeHtml($!devtek-site-address)" class="form-control" />
   </div>
 </div>
 
 <!-- City -->
 <div class="row mt-3">
-  <label for="devtek_city" class="col-sm-2 form-control-label">
+  <label for="devtek-site-city" class="col-sm-2 form-control-label">
     <span class="reqStar">*</span> $tlang.getString("school.city")
   </label>
   <div class="col-sm-6">
-    <input type="text" name="devtek_city" id="devtek_city" size="40" maxlength="255" value="$!validator.escapeHtml($!devtek_city)" class="form-control" />
+    <input type="text" name="devtek-site-city" id="devtek-site-city" size="40" maxlength="255" value="$!validator.escapeHtml($!devtek-site-city)" class="form-control" />
   </div>
 </div>
 
 <!-- State -->
 <div class="row mt-3">
-  <label for="devtek_state" class="col-sm-2 form-control-label">
+  <label for="devtek-site-state" class="col-sm-2 form-control-label">
     <span class="reqStar">*</span> $tlang.getString("school.state")
   </label>
 <div class="col-sm-6">
-  <select name="devtek_state" id="devtek_state" class="form-control">
+  <select name="devtek-site-state" id="devtek-site-state" class="form-control">
     <option value="">-- Select State --</option>
-    <option value="CA" #if($devtek_state == "CA") selected="selected" #end>California</option>
-    <option value="NY" #if($devtek_state == "NY") selected="selected" #end>New York</option>
-    <option value="TX" #if($devtek_state == "TX") selected="selected" #end>Texas</option>
-    <option value="FL" #if($devtek_state == "FL") selected="selected" #end>Florida</option>
-    <option value="IL" #if($devtek_state == "IL") selected="selected" #end>Illinois</option>
-    <option value="PA" #if($devtek_state == "PA") selected="selected" #end>Pennsylvania</option>
-    <option value="OH" #if($devtek_state == "OH") selected="selected" #end>Ohio</option>
-    <option value="GA" #if($devtek_state == "GA") selected="selected" #end>Georgia</option>
-    <option value="NC" #if($devtek_state == "NC") selected="selected" #end>North Carolina</option>
-    <option value="MI" #if($devtek_state == "MI") selected="selected" #end>Michigan</option>
+    <option value="CA" #if($devtek-site-state == "CA") selected="selected" #end>California</option>
+    <option value="NY" #if($devtek-site-state == "NY") selected="selected" #end>New York</option>
+    <option value="TX" #if($devtek-site-state == "TX") selected="selected" #end>Texas</option>
+    <option value="FL" #if($devtek-site-state == "FL") selected="selected" #end>Florida</option>
+    <option value="IL" #if($devtek-site-state == "IL") selected="selected" #end>Illinois</option>
+    <option value="PA" #if($devtek-site-state == "PA") selected="selected" #end>Pennsylvania</option>
+    <option value="OH" #if($devtek-site-state == "OH") selected="selected" #end>Ohio</option>
+    <option value="GA" #if($devtek-site-state == "GA") selected="selected" #end>Georgia</option>
+    <option value="NC" #if($devtek-site-state == "NC") selected="selected" #end>North Carolina</option>
+    <option value="MI" #if($devtek-site-state == "MI") selected="selected" #end>Michigan</option>
   </select>
 </div>
 
@@ -220,11 +220,11 @@
 
 <!-- Zip Code -->
 <div class="row mt-3">
-  <label for="devtek_zipcode" class="col-sm-2 form-control-label">
+  <label for="devtek-site-zipcode" class="col-sm-2 form-control-label">
     <span class="reqStar">*</span> $tlang.getString("school.zip")
   </label>
   <div class="col-sm-6">
-    <input type="text" name="devtek_zipcode" id="devtek_zipcode" size="40" maxlength="10" value="$!validator.escapeHtml($!devtek_zipcode)" class="form-control" />
+    <input type="text" name="devtek-site-zipcode" id="devtek-site-zipcode" size="40" maxlength="10" value="$!validator.escapeHtml($!devtek-site-zipcode)" class="form-control" />
   </div>
 </div>
 		## Language ##
