--- a/admin-tools/src/webapp/vm/user/chef_users_edit.vm
+++ b/admin-tools/src/webapp/vm/user/chef_users_edit.vm
@@ -39,187 +39,59 @@ function removeOptionalAttributeBlock(elem) {
 #end
 	
 
-		<h3>
-			$tlang.getString("useedi.revandmod")
-		</h3>
+
 		
 		#if ($alertMessage)<div class="sak-banner-error" id="alertMsg">$tlang.getString("useconrem.alert") $formattedText.escapeHtml($alertMessage)</div>#end
 		<form name="$form-name" id="useredit" action="#toolForm("$action")" method="post" autocomplete="on">
 			<fieldset>
 				<legend>
- 					#if($user) $tlang.getString("useedi.edit") #else $tlang.getString("usecre.creaco")#end 
+ 					#if($user) Edit Department #else New Department#end 
 				</legend>
                 <div class="instruction">
                     <span class="reqStarInline">*</span> $tlang.getString("usecre.instruc")
                 </div>
 
-				<div class="mb-3 row">
-					<label class="col-sm-2 col-form-label" #if(!$user) for="user_eid" #end>
-						<span class="red">*</span> $tlang.getString("useconrem.useid")
-					</label>
-					#if($!user && !$valueEid)
-						#set($valueEid=$user.Eid)
-					#end
-					<div class="col-sm-3">
-						#if(!$user)
-							## creating new account
-							<input class="form-control sakai-glow" type="text" name="eid" id="user_eid" placeholder="$tlang.getString("useconrem.useid.placeholder")" oninput="USER.validateUserId();" onkeyup="USER.validateUserId();" autocomplete="username" #if($!valueEid)value="$formattedText.escapeHtml($!valueEid)"#end/>
-						#else
-							## modifying existing account
-							#if($!superUser)
-								## only admin type user can modify the eid field
-								<input class="form-control sakai-glow" type="text" name="eid" id="user_eid" placeholder="$tlang.getString("useconrem.useid.placeholder")" oninput="USER.validateUserId();" onkeyup="USER.validateUserId();" autocomplete="off" #if($!valueEid)value="$formattedText.escapeHtml($!valueEid)"#end/>
-							#else
-								<span id="eidValue">$formattedText.escapeHtml($!valueEid)</span>
-							#end
-						#end
-					</div>
-				</div>
 
 				<div class="mb-3 row">
 					<label class="col-sm-2 col-form-label" for="first-name">
-						$tlang.getString("usecre.firnam")
+					 Department Name
 					</label>
 					<div class="col-sm-3">
 						#if ($service.allowUpdateUserName($user.Id) || !$user)
-							<input class="form-control sakai-glow" type="text" name="first-name" id="first-name" placeholder="$tlang.getString("usecre.firnam.placeholder")" autocomplete="given-name" #if($user)value="$formattedText.escapeHtml($user.FirstName)"#elseif($valueFirstName)value="$formattedText.escapeHtml($valueFirstName)"#end />
+							<input class="form-control sakai-glow" type="text" name="first-name" id="first-name" placeholder="Enter Department Name" autocomplete="given-name" #if($user)value="$formattedText.escapeHtml($user.FirstName)"#elseif($valueFirstName)value="$formattedText.escapeHtml($valueFirstName)"#end />
 						#else
 							#if($user)$formattedText.escapeHtml($user.FirstName)#elseif($valueFirstName)$formattedText.escapeHtml($valueFirstName)#end
 						#end
 					</div>
 				</div>
 
-				<div class="mb-3 row">
-					<label class="col-sm-2 col-form-label" for="last-name">
-						$tlang.getString("usecre.lasnam")
-					</label>
-					<div class="col-sm-3">
-						#if ($service.allowUpdateUserName($user.Id) || !$user)
-							<input class="form-control sakai-glow" type="text" name="last-name" id="last-name" placeholder="$tlang.getString("usecre.lasnam.placeholder")" autocomplete="family-name" #if($user)value="$formattedText.escapeHtml($user.LastName)"#elseif($valueLastName)value="$formattedText.escapeHtml($valueLastName)"#end />
-						#else
-							#if($user)$formattedText.escapeHtml($user.LastName)#elseif($valueLastName)$formattedText.escapeHtml($valueLastName)#end
-						#end
-					</div>
-				</div>
-
-				<div class="mb-3 row">
-					<label class="col-sm-2 col-form-label" for="email">
-						$tlang.getString("useconrem.ema")
-					</label>
-					<div class="col-sm-3">
-						#if ($service.allowUpdateUserEmail($user.Id) || !$user)
-							<input class="form-control sakai-glow" type="text" name="email" id="email" placeholder="$tlang.getString("useconrem.ema.placeholder")"  oninput="USER.validateEmail();" onkeyup="USER.validateEmail();" autocomplete="email" #if($user)value="$formattedText.escapeHtml($user.Email)"#elseif($valueEmail)value="$formattedText.escapeHtml($valueEmail)"#end />
-						#else
-							#if($user)$formattedText.escapeHtml($user.Email)#elseif($valueEmail)$formattedText.escapeHtml($valueEmail)#end
-						#end
-					</div>
-
-					<div class="col-sm-offset-2 col-sm-10" id="emailWarningMsg" style="display:none">
-						<div class="validationAlert sak-banner-error">
-							$tlang.getString("useact.invemail")
-						</div>
-					</div>
-				</div>
-
-				#if ($incPw && !$providedUserType)
-					#if(!$!superUser)
-							#if ($service.allowUpdateUserName($user.Id) || $service.allowUpdateUserEmail($user.Id) || $service.allowUpdateUserPassword($user.Id) || !$user)
-								<div class="mb-3 row">
-									<label class="col-sm-2 col-form-label" for="user_pwcur">
-										<span class="red">*</span> $tlang.getString("usecre.vercurpass")
-									</label>
-									<div class="col-sm-3">
-										<input class="form-control sakai-glow" type="password" name="pwcur" id="user_pwcur" placeholder="$tlang.getString("usecre.vercurpass.placeholder")" oninput="USER.validateCurrentPassword();" onkeyup="USER.validateCurrentPassword();" autocomplete="current-password" />
-									</div>
-								</div>
-							#else
-								&nbsp;
-							#end
-					#end
-
-					#if ($service.allowUpdateUserPassword($user.Id) || !$user)
-						<div class="mb-3 row">
-							<label class="col-sm-2 col-form-label" for="user_pw">
-								$tlang.getString("usecre.crenewpass")
-							</label>
-							<div class="col-sm-3">
-								<input class="form-control sakai-glow" type="password" name="pw" id="user_pw" placeholder="$tlang.getString("usecre.crenewpass.placeholder")" oninput="USER.validatePassword();" onkeyup="USER.verifyPasswordsMatch()" onblur="USER.displayStrengthInfo();USER.validatePassword();" onfocus="USER.displayStrengthInfo();" autocomplete="new-password" />
-							</div>
-						</div>
-
-						<div class="form-group forPopover" id="strengthBar" style="display:none;" >
-							<div class="mb-3 row status-row">
-								<label class="col-sm-2 col-form-label" for="strengthBarMeter">
-									 <span class="red">*</span> $tlang.getString("pw.strength")
-								</label>
-								<div id="status-display" class="col-sm-3">
-									<div class="sak-banner-success" id="strongMsg" style="display:none">
-										<span>$tlang.getString("pw.strong")</span>
-										<i class="fa fa-question-circle" aria-hidden="true"></i>
-									</div>
-									<div class="sak-banner-warn" id="moderateMsg" style="display:none">
-										<span>$tlang.getString("pw.moderate")</span>
-										<i class="fa fa-question-circle" aria-hidden="true"></i>
-									</div>
-									<div class="sak-banner-error" id="weakMsg" style="display:none">
-										<span>$tlang.getString("pw.weak")</span>
-										<i class="fa fa-question-circle" aria-hidden="true"></i>
-									</div>
-									<div class="sak-banner-error" id="failMsg" style="display:none;">
-										<span>$tlang.getString("pw.fail")</span>
-										<i class="fa fa-question-circle" aria-hidden="true"></i>
-									</div>
-								</div>
-							</div>
-							<div class="row status-row">
-								<script>
-									window.addEventListener("DOMContentLoaded", () => {
-										
-										new bootstrap.Popover(document.getElementById("status-display"), {
-											placement:"bottom",
-											container: ".forPopover",
-											content: "$tlang.getString("pw.strengthInfo")"
-										}); 
-									});
-								</script>
-							<div class="col-sm-2">
-							</div>
-							<div class="col-sm-3">
-								<div class="progress" style="height:3rem; margin:0;">
-									<div class="progress-bar" id="strengthBarMeter" role="progressbar" style="width:50%;background-color:#900;">
-									</div>
-								</div> 
-							</div>
-							</div>
-						</div>
-
-						<div class="mb-3 row">
-							<label class="col-sm-2 col-form-label" for="user_pw0">
-								$tlang.getString("usecre.vernewpass")
-							</label>
-							<div class="col-sm-3">
-								<input class="form-control sakai-glow" type="password" name="pw0" id="user_pw0" placeholder="$tlang.getString("usecre.vernewpass.placeholder")" onkeyup="USER.verifyPasswordsMatch()" onblur="USER.verifyPasswordsMatch();" autocomplete="new-password" />
-							</div>
-							<div class="col-sm-offset-2 col-sm-10" id="matchMsg" style="display:none">
-								<div class="validationAlert sak-banner-success" id="matchMsg" style="display:block">
-									$tlang.getString("pw.match")
-								</div>
-							</div>
-							<div class="col-sm-offset-2 col-sm-10" id="noMatchMsg" style="display:none">
-								<div class="validationAlert sak-banner-error"  style="display:block">
-									$tlang.getString("pw.noMatch")
-								</div>
-							</div>
-						</div>
-					#else
-						&nbsp;
-					#end
-				#end
 
 				#if ($incType)
 					<div class="mb-3 row">
 						<label class="col-sm-2 col-form-label" for="type">
-							$tlang.getString("usecre.typ")
+							Parent Department
+						</label>
+						<div class="col-sm-3">
+							#if ($service.allowUpdateUserType($user.Id) || !$user)
+								#if($userTypes)
+									<select class="form-control" name="type" id="type">
+									#foreach ( $userType in $userTypes )
+										<option value="$formattedText.escapeHtml($userType)" #if($user.Type==$userType)selected#end>$formattedText.escapeHtml($userType)</option>
+									#end
+									</select>
+								#else
+									<input class="form-control sakai-glow" type="text" name="type" id="type" #if($user)value="$formattedText.escapeHtml($user.Type)"#elseif($valueType)value="$formattedText.escapeHtml($valueType)"#end />
+								#end
+							#else
+								#if($user)$formattedText.escapeHtml($user.Type)#elseif($valueType)$formattedText.escapeHtml($valueType)#end
+							#end
+						</div>
+					</div>
+				#end
+				#if ($incType)
+					<div class="mb-3 row">
+						<label class="col-sm-2 col-form-label" for="type">
+							Department Admin
 						</label>
 						<div class="col-sm-3">
 							#if ($service.allowUpdateUserType($user.Id) || !$user)
@@ -239,46 +111,6 @@ function removeOptionalAttributeBlock(elem) {
 					</div>
 				#end
 
-				<div class="mb-3 row">
-					<label class="col-sm-2 col-form-label" for="disabled">
-						$tlang.getString("disable.user")
-					</label>
-					#set($disabled = $user.Properties.getProperty("disabled"))
-					<div class="col-sm-3">
-						#if(!$!superUser)
-							#if ($disabled != 'true')$tlang.getString("false") #else $tlang.getString("true") #end 
-				 		#else
-							<input class="form-check-input" type="checkbox" name="disabled" id="disabled" #if($disabled == 'true')CHECKED#end></input>
-					 	#end
-					</div>
-				</div>
-
-#if ($user)
-	<table class="table table-striped table-hover table-bordered ms-0">
-		<tbody>
-			<tr>
-				<td><label>$tlang.getString("useedi.creby")</label></td>
-				<td>$formattedText.escapeHtml($user.CreatedBy.DisplayName)</td>
-			</tr>
-			<tr>
-				<td><label>$tlang.getString("useedi.cre")</label></td>
-				<td>$formattedText.escapeHtml($userCreated)</td>
-			</tr>
-			<tr>
-				<td><label>$tlang.getString("useedi.modby")</label></td>
-				<td>$formattedText.escapeHtml($user.ModifiedBy.DisplayName)</td>
-			</tr>
-			<tr>
-				<td><label>$tlang.getString("useedi.mod")</label></td>
-				<td>$formattedText.escapeHtml($userModifiedDate)</td>
-			</tr>
-			<tr>
-				<td><label>$tlang.getString("useconrem.useuid")</label></td>
-				<td>$formattedText.escapeHtml($user.Id)</td>
-			</tr>
-		</tbody>
-	</table>
-#end
 
 		## optional attributes block
 		#if (!$optionalAttributes.isEmpty())
