--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteConfirm.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteConfirm.vm
@@ -60,7 +60,9 @@
 	#end
 	<form name="addSiteForm" action="#toolForm("$action")" method="post">
 		<input type="hidden" name="eventSubmit_doAdd_site_option" value="x" />
-		<input type="hidden" name="devtek-department-type" value="school" />
+		#if ($isSchoolSetup)
+			<input type="hidden" name="devtek-department-type" value="school" />
+		#end
 		<input type="hidden" name="option" value="cancel" />
 		<div class="table">
 		<table class ="itemSummary" cellspacing="0" summary="$tlang.getString("newsc.list.summary")" border="0">
