--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfoConfirm.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfoConfirm.vm
@@ -208,7 +208,9 @@
 		<input type="hidden" name="back" value="$!backIndex" />
 		<input type="hidden" name="templateIndex" value="$!templateIndex" />
 		<input type="hidden" name="continue" value="12" />
-		<input type="hidden" name="devtek-department-type" value="school" />
+		#if ($isSchoolSetup)
+			<input type="hidden" name="devtek-department-type" value="school" />
+		#end
 		<p class="act">
 			<input type="submit" accesskey="s" class="active" name="eventSubmit_doSave_siteInfo" value="$tlang.getString("sitediconf.fin")" onclick="SPNR.disableControlsAndSpin( this, null );" />
 			<input type="submit" accesskey="b" name="eventSubmit_doBack" value="$tlang.getString("sitediconf.bac")" onclick="SPNR.disableControlsAndSpin( this, null );" />
