--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteConfirm.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteConfirm.vm
@@ -60,7 +60,7 @@
 	#end
 	<form name="addSiteForm" action="#toolForm("$action")" method="post">
 		<input type="hidden" name="eventSubmit_doAdd_site_option" value="x" />
-		#if ($isSchoolSetup)
+		#if ($deptType == "school")
 			<input type="hidden" name="devtek-department-type" value="school" />
 		#end
 		<input type="hidden" name="option" value="cancel" />
